--- a/01-Fundamentals-Part-1/starter/index.html
+++ b/01-Fundamentals-Part-1/starter/index.html
@@ -23,10 +23,10 @@
         color: white;
       }
     </style>
-  </head>
+    </head>
   <body>
     <h1>JavaScript Fundamentals – Part 1</h1>
   <h2>YOoo it is beginning</h2>
-    
+    <script src="main.js"></script>
   </body>
 </html>
