--- a/01-Fundamentals-Part-1/starter/index.html
+++ b/01-Fundamentals-Part-1/starter/index.html
@@ -25,8 +25,10 @@
     </style>
     </head>
   <body>
+
     <h1>JavaScript Fundamentals – Part 1</h1>
-  <h2>YOoo it is beginning</h2>
+    <button onclick="windowContent()"></button>
+
     <script src="main.js"></script>
   </body>
 </html>
