--- a/01-Fundamentals-Part-1/starter/index.html
+++ b/01-Fundamentals-Part-1/starter/index.html
@@ -25,7 +25,7 @@
     </style>
     </head>
   <body>
-
+    <h1>kndsflknk</h1>
     <h1>JavaScript Fundamentals – Part 1</h1>
     <button onclick="windowContent()"></button>
 
